# allstar

./: .dockerignore  .env.example  .gitignore  Dockerfile.portfolio  Dockerfile.voc  README.md  compose.yml  docker-compose.yml  pyproject.toml  requirements.txt
RUN/: README.md  qa_control_gui.py  server_control_gui.py  start_qa.bat  start_qa_control.bat  start_qa_control_hidden.vbs  start_qa_hidden.vbs  start_server_control.bat  start_server_control_hidden.vbs  start_servers.bat  start_servers_hidden.vbs
_DOCS/: AI_AGENT_KNOWLEDGE_SYNC.md  AI_AGENT_LIVE_REPORT_AUTOMATION.md  AI_AGENT_TESTCASE_REPORT_CHARTS.md  AI_CHAT_FAULT_TEST_BUTTONS.md  AI_QUALITY_DASHBOARD_UI_IMPROVEMENTS.md  AWS_REVERSIBLE_DEPLOYMENT_AND_LOCAL_RESTORE.md  CHAT_SERVER_STATUS_AND_RECONNECT.md  CHAT_SERVICE_CONTROL_BRIDGE.md  CONTROL_CENTER_SINGLE_INSTANCE.md  DASHBOARD_K6_LOAD_TEST_PLAN.md  DASHBOARD_TEST_TAB_PASSWORD.md  DOCKER_STREAMLIT_K6_RUNNER.md  INTEGRATED_DASHBOARD_STRUCTURE_REQUIREMENTS.md  INTEGRATED_GRAFANA_DASHBOARD_REQUIREMENTS.md  INTEGRATED_PROJECT_IMPLEMENTATION.md  INTEGRATED_REPORT_DASHBOARD_REQUIREMENTS.md  LOG_RETENTION_AND_COMPRESSION.md  MONITORING_AND_OPERATIONAL_STABILITY_EXECUTION_PLAN.md  PROJECT_ANALYSIS_SUMMARY.md  PROJECT_DIRECTORY_STRUCTURE.md  PROJECT_PROGRESS_CHECKLIST.md  QA_AI_TESTCASE_TAB_AND_K6_REPORT_POLICY.md  QA_CONTROL_UI.md  QA_REPORT_AUTOMATION.md  README.md  REMAINING_WORK_PLAN.md  SERVER_CONTROL_LIFECYCLE.md  TEST_SUITE_CONSOLIDATION.md  VOC_CHATBOT_QUALITY_AND_FAILURE_IMPROVEMENT_PLAN.md  VOC_LIVE_REPORT_PRESENTATION.md  VOC_TESTCASE_GRAFANA_METRICS.md  (+3 more)
(+260 files in other folders)
